11/19/08 - #836, complete and revised model.txt received from Archie
# 1.00.09 (26322)
11/19/08 - remove viewport demo from developer menu
11/18/08 - #727, add dev dialog that shows values of internal variables in the glacier evolution model
11/17/08 - #851, flags can't be dragged from valley floor to ice surface while glacier is moving
# 1.00.08 (25973)
10/16/08 - [726] flags and debris on glacier surface stop advancing when glacier is retreating
10/15/08 - [849] workaround for sliver of blue sky that appears above snowfall ceiling (search for "Unfuddle 849" comment)
10/15/08 - organize imports
10/15/08 - compute MountainsAndValleyNode.F_70000 in terms of F_0, so that image alignment can be shifted by changing only F_0
10/15/08 - fix alignment of new SVG mountains image, Archie gave me a slightly smaller image
10/15/08 - [738] crop SVG mountains image to prevent OutOfMemoryException
10/15/08 - disable Help feature until [725] is addressed
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - add project name constant
10/8/08 - moved list of rejected features to Unfuddle 796
10/2/08 - move default left edge of zoomed view to -3400m, so that there is more space to right of default terminus
# 1.00.07 (24829)
9/29/08 - get rid of scale calls in BoreholeDrillNode, resize image files
9/29/08 - [750] make borehole drill draggable by fire button
9/29/08 - set hgap and vgap to zero for control panel FlowLayouts
> changed default snowfall to 0.93m (was 0.95m)
9/29/08 - [730] change default snowfall to 0.93m (was 0.95m) so that entire default glacier fits in zoomed viewport at new x-axis scale
9/29/08 - [730] change x-axis scale from 0.062 to 0.1 so that 80km fills most of the birds-eye view
> make Glacial Budget Meter tool snap to surface of ice or valley when it is released
9/29/08 - [733] glacial budget meter snap to valley floor and show values for x<0 ,like it does for x>=0